feat: Implement dedicated authentication flows for customer, vendor, and courier roles, including new screens for login, registration, and password reset, and introduce an `AuthHeader` widget.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -163,7 +163,6 @@
   "clearCartMessage": "هل تريد إزالة جميع المنتجات من السلة؟",
   "clearCartNo": "لا",
   "clearCartYes": "نعم",
-  "clearCartYes": "نعم",
   "clearCartSuccess": "تم تفريغ السلة بنجاح",
   "categoryChangeConfirmTitle": "تغيير الفئة",
   "categoryChangeConfirmMessage": "سيؤدي تغيير الفئة إلى مسح المنتجات الموجودة في سلتك.",
@@ -730,12 +729,8 @@
   "lastLocationUpdate": "آخر تحديث",
   "noLocationData": "لا توجد بيانات موقع",
   "selectLocationOnMap": "حدد الموقع على الخريطة",
-  "selectedLocation": "الموقع المحدد",
   "useCurrentLocation": "استخدم الموقع الحالي",
   "updateLocation": "تحديث الموقع",
-  "locationUpdatedSuccessfully": "تم تحديث الموقع بنجاح",
-  "failedToUpdateLocation": "فشل تحديث الموقع",
-  "locationSharingInfo": "مشاركة الموقع مطلوبة لتلقي الطلبات من المطاعم القريبة. يتم مشاركة موقعك تلقائياً عندما تكون حالتك \"متاح\".",
   "locationManagementDescription": "عرض وتحديث موقعك الحالي",
   "vendorsMap": "خريطة المتاجر",
   "findMyLocation": "العثور على موقعي",
@@ -960,12 +955,8 @@
   "failedToUpdateVehicleType": "فشل تحديث نوع المركبة",
   "selectLocationRequired": "اختيار الموقع إلزامي",
   "selectLocationRequiredDescription": "يرجى تحديد موقعك. هذه المعلومات مطلوبة لتلقي الطلبات.",
-  "useCurrentLocation": "استخدام الموقع الحالي",
   "selectFromMap": "اختيار من الخريطة",
-  "locationUpdatedSuccessfully": "تم تحديث الموقع بنجاح",
-  "failedToUpdateLocation": "فشل تحديث الموقع",
   "gettingCurrentLocation": "جارٍ الحصول على موقعك...",
-  "pleaseSelectLocation": "يرجى تحديد موقع",
   "locationServicesDisabledTitle": "خدمات الموقع معطلة",
   "locationServicesDisabledMessage": "خدمات الموقع معطلة. يرجى تفعيل خدمات الموقع من الإعدادات.",
   "openSettings": "فتح الإعدادات",
@@ -1066,6 +1057,26 @@
   "createPassword": "إنشاء كلمة مرور جديدة",
   "createPasswordDesc": "رجأ إدخال كلمة مرور جديدة لحسابك",
   "requiredField": "هذا الحقل مطلوب",
-  "resetPassword": "إعادة تعيين كلمة المرور"
+  "resetPassword": "إعادة تعيين كلمة المرور",
+  "codeExpired": "انتهت صلاحية الرمز.",
+  "businessType": "نوع العمل",
+  "businessTypeRequired": "نوع العمل مطلوب",
+  "restaurant": "مطعم",
+  "market": "سوق",
+  "defaultError": "حدث خطأ",
+  "passwordPlaceholder": "******",
+  "vehicleTypeRequired": "نوع المركبة مطلوب",
+  "keywordTokenExpired": "expired",
+  "errorLoginVendorToCustomer": "لا يمكن تسجيل الدخول إلى شاشات العملاء بحساب بائع.",
+  "errorLoginCourierToCustomer": "لا يمكن تسجيل الدخول إلى شاشات العملاء بحساب سائق.",
+  "errorLoginCustomerToVendor": "لا يمكن تسجيل الدخول إلى شاشات البائعين بحساب عميل.",
+  "errorLoginCourierToVendor": "لا يمكن تسجيل الدخول إلى شاشات البائعين بحساب سائق.",
+  "errorLoginCustomerToCourier": "لا يمكن تسجيل الدخول إلى شاشات السائقين بحساب عميل.",
+  "errorLoginVendorToCourier": "لا يمكن تسجيل الدخول إلى شاشات السائقين بحساب بائع.",
+  "passwordRuleChars": "6 أحرف على الأقل",
+  "passwordRuleDigit": "رقم واحد على الأقل (0-9)",
+  "passwordRuleUpper": "حرف كبير واحد على الأقل (A-Z)",
+  "passwordRuleLower": "حرف صغير واحد على الأقل (a-z)",
+  "passwordRuleSpecial": "رمز خاص واحد على الأقل (!@#$%^&* إلخ.)",
+  "locationSharingInfo": "مشاركة الموقع مطلوبة لتلقي الطلبات من المطاعم القريبة. تتم مشاركة موقعك تلقائيًا عندما تكون حالتك \"متاح\"."
 }
-
