--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -187,7 +187,7 @@
   "courierSubtitle": "Sign in to manage your deliveries",
   "areYouCourier": "Are you a courier?",
   "areYouVendor": "Are you a vendor? ",
-  "courierSignIn": "Courier Sign In",
+  "courierSignIn": "Sign in",
   "courierLoginLink": "Courier Login",
   "roleCustomer": "Customer",
   "roleVendor": "Vendor",
@@ -739,11 +739,8 @@
   "lastLocationUpdate": "Last Update",
   "noLocationData": "No location data available",
   "selectLocationOnMap": "Select Location on Map",
-  "selectedLocation": "Selected Location",
   "useCurrentLocation": "Use Current Location",
   "updateLocation": "Update Location",
-  "locationUpdatedSuccessfully": "Location updated successfully",
-  "failedToUpdateLocation": "Failed to update location",
   "locationSharingInfo": "Location sharing is required to receive orders from nearby restaurants. Your location is automatically shared when your status is \"Available\".",
   "locationManagementDescription": "View and update your current location",
   "vendorsMap": "Vendors Map",
@@ -969,12 +966,8 @@
   "failedToUpdateVehicleType": "Failed to update vehicle type",
   "selectLocationRequired": "Location Selection Required",
   "selectLocationRequiredDescription": "Please select your location. This information is required to receive orders.",
-  "useCurrentLocation": "Use Current Location",
   "selectFromMap": "Select from Map",
-  "locationUpdatedSuccessfully": "Location updated successfully",
-  "failedToUpdateLocation": "Failed to update location",
   "gettingCurrentLocation": "Getting your location...",
-  "pleaseSelectLocation": "Please select a location",
   "locationServicesDisabledTitle": "Location Services Disabled",
   "locationServicesDisabledMessage": "Location services are disabled. Please enable location services in settings.",
   "openSettings": "Open Settings",
@@ -1075,5 +1068,20 @@
   "createPassword": "Create New Password",
   "createPasswordDesc": "Please enter a new password for your account",
   "requiredField": "This field is required",
-  "resetPassword": "Reset Password"
+  "resetPassword": "Reset Password",
+  "codeExpired": "The code has expired.",
+  "businessType": "Business Type",
+  "businessTypeRequired": "Business type is required",
+  "restaurant": "Restaurant",
+  "market": "Market",
+  "defaultError": "An error occurred",
+  "passwordPlaceholder": "******",
+  "vehicleTypeRequired": "Vehicle Type is required",
+  "errorLoginVendorToCustomer": "Cannot login to customer screens with a vendor account.",
+  "errorLoginCourierToCustomer": "Cannot login to customer screens with a courier account.",
+  "errorLoginCustomerToVendor": "Cannot login to vendor screens with a customer account.",
+  "errorLoginCourierToVendor": "Cannot login to vendor screens with a courier account.",
+  "errorLoginCustomerToCourier": "Cannot login to courier screens with a customer account.",
+  "errorLoginVendorToCourier": "Cannot login to courier screens with a vendor account.",
+  "keywordTokenExpired": "expired"
 }
