--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -187,7 +187,7 @@
   "courierSubtitle": "Teslimatlarını yönetmek için giriş yap",
   "areYouCourier": "Kurye misiniz?",
   "areYouVendor": "Satıcı mısınız? ",
-  "courierSignIn": "Kurye Girişi",
+  "courierSignIn": "Giriş yap",
   "courierLoginLink": "Kurye Girişi",
   "roleCustomer": "Müşteri",
   "roleVendor": "Satıcı",
@@ -735,11 +735,8 @@
   "lastLocationUpdate": "Son Güncelleme",
   "noLocationData": "Henüz konum bilgisi yok",
   "selectLocationOnMap": "Haritada Konum Seç",
-  "selectedLocation": "Seçilen Konum",
   "useCurrentLocation": "Mevcut Konumu Kullan",
   "updateLocation": "Konumu Güncelle",
-  "locationUpdatedSuccessfully": "Konum başarıyla güncellendi",
-  "failedToUpdateLocation": "Konum güncellenemedi",
   "locationSharingInfo": "Konum paylaşımı, yakınındaki restoranlardan sipariş alabilmen için gereklidir. Durumun \"Available\" olduğunda konumun otomatik olarak paylaşılır.",
   "locationManagementDescription": "Mevcut konumunu görüntüle ve güncelle",
   "vendorsMap": "Marketler Haritası",
@@ -964,12 +961,8 @@
   "failedToUpdateVehicleType": "Araç türü güncellenemedi",
   "selectLocationRequired": "Konum Seçimi Zorunlu",
   "selectLocationRequiredDescription": "Lütfen konumunuzu seçin. Bu bilgi sipariş almak için gereklidir.",
-  "useCurrentLocation": "Mevcut Konumu Kullan",
   "selectFromMap": "Haritadan Seç",
-  "locationUpdatedSuccessfully": "Konum başarıyla güncellendi",
-  "failedToUpdateLocation": "Konum güncellenemedi",
   "gettingCurrentLocation": "Konumunuz alınıyor...",
-  "pleaseSelectLocation": "Lütfen bir konum seçin",
   "locationServicesDisabledTitle": "Konum Servisleri Kapalı",
   "locationServicesDisabledMessage": "Konum servisleri kapalı. Lütfen ayarlardan konum servislerini açın.",
   "openSettings": "Ayarları Aç",
@@ -1070,5 +1063,20 @@
   "createPassword": "Yeni Şifre Oluştur",
   "createPasswordDesc": "Lütfen hesabınız için yeni bir şifre girin",
   "requiredField": "Bu alan zorunludur",
-  "resetPassword": "Şifreyi Sıfırla"
+  "resetPassword": "Şifreyi Sıfırla",
+  "codeExpired": "Kodun süresi doldu.",
+  "businessType": "İşletme Türü",
+  "businessTypeRequired": "İşletme türü gerekli",
+  "restaurant": "Restoran",
+  "market": "Market",
+  "defaultError": "Bir hata oluştu",
+  "passwordPlaceholder": "******",
+  "vehicleTypeRequired": "Araç Tipi zorunludur",
+  "errorLoginVendorToCustomer": "Satıcı hesabıyla, müşteri ekranlarına giriş yapılamaz.",
+  "errorLoginCourierToCustomer": "Kurye hesabıyla, müşteri ekranlarına giriş yapılamaz.",
+  "errorLoginCustomerToVendor": "Müşteri hesabıyla, satıcı ekranlarına giriş yapılamaz.",
+  "errorLoginCourierToVendor": "Kurye hesabıyla, satıcı ekranlarına giriş yapılamaz.",
+  "errorLoginCustomerToCourier": "Müşteri hesabıyla, kurye ekranlarına giriş yapılamaz.",
+  "errorLoginVendorToCourier": "Satıcı hesabıyla, kurye ekranlarına giriş yapılamaz.",
+  "keywordTokenExpired": "süresi"
 }
