feat: Revise onboarding content, change default locale to Arabic, and remove initial language selection flow.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -459,10 +459,10 @@
   "skip": "تخطي",
   "next": "التالي",
   "getStarted": "ابدأ",
-  "onboardingTitle1": "تسوق كل ما تحتاجه",
-  "onboardingDesc1": "البقالة الطازجة والاحتياجات اليومية والمزيد—كل ذلك في تطبيق واحد",
-  "onboardingTitle2": "توصيل سريع وموثوق",
-  "onboardingDesc2": "تتبع طلبك في الوقت الفعلي واحصل عليه بسرعة",
+  "onboardingTitle1": "وجبات لذيذة\nعند بابك في دقائق",
+  "onboardingDesc1": "اطلب وجباتك المفضلة من أفضل المطاعم واستمتع بها ساخنة.",
+  "onboardingTitle2": "تسوق البقالة\nعند بابك في دقائق",
+  "onboardingDesc2": "خضروات وفواكه طازجة واحتياجاتك اليومية تصلك بسرعة.",
   "onboardingTitle3": "أفضل الأسعار والعروض",
   "onboardingDesc3": "استمتع بصفقات حصرية وأسعار تنافسية كل يوم",
   "pending": "قيد الانتظار",
