--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -469,10 +469,10 @@
   "skip": "Skip",
   "next": "Next",
   "getStarted": "Get Started",
-  "onboardingTitle1": "Shop Everything You Need",
-  "onboardingDesc1": "Fresh groceries, daily essentials, and more—all in one app",
-  "onboardingTitle2": "Fast & Reliable Delivery",
-  "onboardingDesc2": "Track your order in real-time and get it delivered quickly",
+  "onboardingTitle1": "Delicious Meals\nAt Your Door In Minutes",
+  "onboardingDesc1": "Order your favorite meals from top restaurants and enjoy them warm.",
+  "onboardingTitle2": "Grocery Shopping\nAt Your Door In Minutes",
+  "onboardingDesc2": "Fresh vegetables, fruits, and daily needs delivered fast.",
   "onboardingTitle3": "Best Prices & Offers",
   "onboardingDesc3": "Enjoy exclusive deals and competitive prices every day",
   "pending": "Pending",
