--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -464,12 +464,10 @@
   "skip": "Geç",
   "next": "İleri",
   "getStarted": "Hadi Başlayın!",
-  "onboardingTitle1": "İhtiyacınız Olan Her Şey",
-  "onboardingDesc1": "Taze market ürünleri, günlük ihtiyaçlar ve daha fazlası—tek uygulamada",
-  "onboardingTitle2": "Hızlı ve Güvenilir Teslimat",
-  "onboardingDesc2": "Siparişinizi anlık takip edin ve hızlıca teslim alın",
-  "onboardingTitle3": "En İyi Fiyatlar ve Kampanyalar",
-  "onboardingDesc3": "Her gün özel teklifler ve rekabetçi fiyatların keyfini çıkarın",
+  "onboardingTitle1": "Lezzetli Yemekler\nDakikalar İçinde Kapınızda",
+  "onboardingDesc1": "Favori restoranlarınızdan dilediğiniz yemeği sipariş verin, sıcak sıcak tadını çıkarın.",
+  "onboardingTitle2": "Market Alışverişiniz\nDakikalar İçinde Kapınızda",
+  "onboardingDesc2": "Taze sebze, meyve ve günlük ihtiyaçlarınız en hızlı şekilde kapınızda.",
   "pending": "Bekleyen",
   "preparing": "Hazırlanıyor",
   "ready": "Hazır",
