--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -1078,5 +1078,7 @@
   "passwordRuleUpper": "حرف كبير واحد على الأقل (A-Z)",
   "passwordRuleLower": "حرف صغير واحد على الأقل (a-z)",
   "passwordRuleSpecial": "رمز خاص واحد على الأقل (!@#$%^&* إلخ.)",
-  "locationSharingInfo": "مشاركة الموقع مطلوبة لتلقي الطلبات من المطاعم القريبة. تتم مشاركة موقعك تلقائيًا عندما تكون حالتك \"متاح\"."
+  "locationSharingInfo": "مشاركة الموقع مطلوبة لتلقي الطلبات من المطاعم القريبة. تتم مشاركة موقعك تلقائيًا عندما تكون حالتك \"متاح\".",
+  "accountPendingApprovalTitle": "الحساب قيد المراجعة",
+  "accountPendingApprovalMessage": "حسابك قيد المراجعة حاليًا. سيتم منح الوصول بمجرد الموافقة على حسابك."
 }
