--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -1083,5 +1083,7 @@
   "errorLoginCourierToVendor": "Cannot login to vendor screens with a courier account.",
   "errorLoginCustomerToCourier": "Cannot login to courier screens with a customer account.",
   "errorLoginVendorToCourier": "Cannot login to courier screens with a vendor account.",
-  "keywordTokenExpired": "expired"
+  "keywordTokenExpired": "token expired",
+  "accountPendingApprovalTitle": "Account Pending Approval",
+  "accountPendingApprovalMessage": "Your account is currently under review. Access will be granted once your account is approved."
 }
