feat: Add new onboarding content, refactor authentication provider logic, and apply minor code style improvements.

--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -468,6 +468,8 @@
   "onboardingDesc1": "Favori restoranlarınızdan dilediğiniz yemeği sipariş verin, sıcak sıcak tadını çıkarın.",
   "onboardingTitle2": "Market Alışverişiniz\nDakikalar İçinde Kapınızda",
   "onboardingDesc2": "Taze sebze, meyve ve günlük ihtiyaçlarınız en hızlı şekilde kapınızda.",
+  "onboardingTitle3": "En İyi Fiyatlar & Fırsatlar",
+  "onboardingDesc3": "Her gün özel fırsatların ve rekabetçi fiyatların tadını çıkarın",
   "pending": "Bekleyen",
   "preparing": "Hazırlanıyor",
   "ready": "Hazır",
