--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -1085,5 +1085,24 @@
   "errorLoginVendorToCourier": "Cannot login to courier screens with a vendor account.",
   "keywordTokenExpired": "token expired",
   "accountPendingApprovalTitle": "Account Pending Approval",
-  "accountPendingApprovalMessage": "Your account is currently under review. Access will be granted once your account is approved."
+  "accountPendingApprovalMessage": "Your account is currently under review. Access will be granted once your account is approved.",
+  "vendorStatusNormal": "Normal",
+  "vendorStatusBusy": "Busy",
+  "vendorStatusOverloaded": "Overloaded",
+  "vendorStatusNormalDesc": "Standard time",
+  "vendorStatusBusyDesc": "+15 min",
+  "vendorStatusOverloadedDesc": "+45 min",
+  "storeStatus": "Store Status",
+  "workingHoursRequired": "Working Hours Required",
+  "workingHoursRequiredDescription": "Please set your working hours to start receiving orders.",
+  "workingHoursStart": "Start Time",
+  "workingHoursEnd": "End Time",
+  "selectTime": "Select Time",
+  "workingHoursUpdatedSuccessfully": "Working hours updated successfully",
+  "failedToUpdateWorkingHours": "Failed to update working hours",
+  "workingHours": "Working Hours",
+  "workingDays": "Working Days",
+  "closed": "Closed",
+  "open24Hours": "Open 24 Hours",
+  "hours": "Hours"
 }
