--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -1080,5 +1080,24 @@
   "errorLoginVendorToCourier": "Satıcı hesabıyla, kurye ekranlarına giriş yapılamaz.",
   "keywordTokenExpired": "süresi",
   "accountPendingApprovalTitle": "Hesabınız Onay Bekliyor",
-  "accountPendingApprovalMessage": "Hesabınız şu anda incelenmektedir. Onaylandıktan sonra erişiminiz açılacaktır."
+  "accountPendingApprovalMessage": "Hesabınız şu anda incelenmektedir. Onaylandıktan sonra erişiminiz açılacaktır.",
+  "vendorStatusNormal": "Normal",
+  "vendorStatusBusy": "Yoğun",
+  "vendorStatusOverloaded": "Çok Yoğun",
+  "vendorStatusNormalDesc": "Standart süre",
+  "vendorStatusBusyDesc": "+15 dk",
+  "vendorStatusOverloadedDesc": "+45 dk",
+  "storeStatus": "Mağaza Durumu",
+  "workingHoursRequired": "Çalışma Saatleri Zorunludur",
+  "workingHoursRequiredDescription": "Sipariş almaya başlamak için lütfen çalışma saatlerinizi belirleyin.",
+  "workingHoursStart": "Başlangıç Saati",
+  "workingHoursEnd": "Bitiş Saati",
+  "selectTime": "Saat Seçin",
+  "workingHoursUpdatedSuccessfully": "Çalışma saatleri başarıyla güncellendi",
+  "failedToUpdateWorkingHours": "Çalışma saatleri güncellenemedi",
+  "workingHours": "Çalışma Saatleri",
+  "workingDays": "Çalışma Günleri",
+  "closed": "Kapalı",
+  "open24Hours": "24 Saat Açık",
+  "hours": "Saat"
 }
