feat: implement vendor delivery zone management screen, models, and API."

--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -798,6 +798,9 @@
       "distance": {}
     }
   },
+  "deliveryZones": "Delivery Zones",
+  "deliveryZonesDescription": "Manage cities and districts you deliver to",
+  "deliveryZonesUpdated": "Delivery zones updated successfully",
   "removedFromFavorites": "{productName} removed from favorites",
   "@removedFromFavorites": {
     "placeholders": {
