--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -794,6 +794,7 @@
       "distance": {}
     }
   },
+  "popularSearches": "Popüler Aramalar",
   "removedFromFavorites": "{productName} favorilerden çıkarıldı",
   "@removedFromFavorites": {
     "placeholders": {
@@ -1102,5 +1103,7 @@
   "workingDays": "Çalışma Günleri",
   "closed": "Kapalı",
   "open24Hours": "24 Saat Açık",
-  "hours": "Saat"
+  "hours": "Saat",
+  "noFavoritesFound": "Henüz favori ürününüz yok",
+  "favoritesEmptyMessage": "Beğendiğiniz ürünleri favorilere ekleyerek burada görüntüleyebilirsiniz."
 }
