feat: Add comprehensive unit and widget tests, and refine UI, localization, and provider logic across features.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -18,6 +18,22 @@
   "turkishLira": "الليرة التركية",
   "tether": "Tether",
   "save": "حفظ",
+  "productResmi": "صورة المنتج",
+  "yildiz": "نجمة",
+  "favorilereEkle": "إضافة إلى المفضلة",
+  "favorilerdenCikar": "إزالة من المفضلة",
+  "menu": "قائمة",
+  "fiyat": "السعر",
+  "adediAzalt": "تقليل الكمية",
+  "miktar": "الكمية",
+  "adediArtir": "زيادة الكمية",
+  "sepeteEkle": "أضف إلى السلة",
+  "cart": "السلة",
+  "share": "مشاركة",
+  "back": "رجوع",
+  "degerlendirme": "تقييم",
+  "totalAmount": "المبلغ الإجمالي",
+  "degerlendirmeSayisi": "{count} تقييمات",
   "cancel": "إلغاء",
   "products": "المنتجات",
   "vendors": "البائعون",
