--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -18,6 +18,22 @@
   "turkishLira": "Türk Lirası",
   "tether": "Tether",
   "save": "Kaydet",
+  "productResmi": "Ürün resmi",
+  "yildiz": "yıldız",
+  "favorilereEkle": "Favorilere ekle",
+  "favorilerdenCikar": "Favorilerden çıkar",
+  "menu": "Menü",
+  "fiyat": "Fiyat",
+  "adediAzalt": "Adedi azalt",
+  "miktar": "Miktar",
+  "adediArtir": "Adedi artır",
+  "sepeteEkle": "Sepete ekle",
+  "cart": "Sepet",
+  "share": "Paylaş",
+  "back": "Geri dön",
+  "degerlendirme": "değerlendirme",
+  "totalAmount": "Toplam tutar",
+  "degerlendirmeSayisi": "{count} değerlendirme",
   "cancel": "İptal",
   "products": "Ürünler",
   "vendors": "Satıcılar",
