feat: Introduce campaign selection UI, integrate into cart/checkout, and add supporting localization and integration tests.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -28,7 +28,6 @@
   "miktar": "الكمية",
   "adediArtir": "زيادة الكمية",
   "sepeteEkle": "أضف إلى السلة",
-  "cart": "السلة",
   "share": "مشاركة",
   "back": "رجوع",
   "degerlendirme": "تقييم",
@@ -138,6 +137,7 @@
   "cartEmptyMessage": "سلتك فارغة",
   "cartVoucherPlaceholder": "أدخل رمز القسيمة",
   "cartSubtotalLabel": "المجموع الفرعي",
+  "discountTitle": "خصم",
   "cartDeliveryFeeLabel": "رسوم التوصيل",
   "cartTotalAmountLabel": "المبلغ الإجمالي",
   "cartSameVendorWarning": "يجب أن تكون جميع المنتجات في السلة من نفس المتجر",
