--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -28,7 +28,6 @@
   "miktar": "Quantity",
   "adediArtir": "Increase quantity",
   "sepeteEkle": "Add to cart",
-  "cart": "Cart",
   "share": "Share",
   "back": "Go back",
   "degerlendirme": "review",
@@ -143,6 +142,7 @@
   "cartEmptyMessage": "Your cart is empty",
   "cartVoucherPlaceholder": "Enter your voucher code",
   "cartSubtotalLabel": "Subtotal",
+  "discountTitle": "Discount",
   "cartDeliveryFeeLabel": "Delivery Fee",
   "cartTotalAmountLabel": "Total Amount",
   "cartSameVendorWarning": "All items in the cart must be from the same vendor",
