--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -28,7 +28,6 @@
   "miktar": "Miktar",
   "adediArtir": "Adedi artır",
   "sepeteEkle": "Sepete ekle",
-  "cart": "Sepet",
   "share": "Paylaş",
   "back": "Geri dön",
   "degerlendirme": "değerlendirme",
@@ -138,6 +137,7 @@
   "cartEmptyMessage": "Sepetiniz boş",
   "cartVoucherPlaceholder": "Kupon kodunuzu girin",
   "cartSubtotalLabel": "Ara Toplam",
+  "discountTitle": "İndirim",
   "cartDeliveryFeeLabel": "Teslimat Ücreti",
   "cartTotalAmountLabel": "Genel Toplam",
   "cartSameVendorWarning": "Sepetteki tüm ürünler aynı marketten olmalı",
