feat: implement coupon application and order note features with updated checkout localizations and UI.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -140,6 +140,16 @@
   "discountTitle": "خصم",
   "cartDeliveryFeeLabel": "رسوم التوصيل",
   "cartTotalAmountLabel": "المبلغ الإجمالي",
+  "addOrderNote": "إضافة ملاحظة الطلب",
+  "orderNote": "ملاحظة الطلب",
+  "enterOrderNoteHint": "أدخل ملاحظتك للطلب...",
+  "couponApplied": "تم تطبيق القسيمة",
+  "couponRemoved": "تم إزالة القسيمة",
+  "enterCouponCode": "أدخل رمز القسيمة",
+  "apply": "تطبيق",
+  "noCampaignsFound": "لا توجد حملات نشطة",
+  "noCampaignsDescription": "لا توجد حملات نشطة في الوقت الحالي. يرجى التحقق مرة أخرى لاحقًا أو إدخال رمز قسيمة.",
+  "confirmOrder": "تأكيد الطلب",
   "cartSameVendorWarning": "يجب أن تكون جميع المنتجات في السلة من نفس المتجر",
   "orderPlacedTitle": "تم استلام الطلب!",
   "orderPlacedMessage": "رقم طلبك: {orderId}\nالإجمالي: {total}",
@@ -451,22 +461,19 @@
   "date": "التاريخ",
   "approve": "موافقة",
   "verify": "تأكيد",
-  "placeOrder": "تقديم الطلب",
-  "checkoutTitle": "تأكيد الطلب",
-  "deliveryAddress": "عنوان التسليم",
+  "placeOrder": "إتمام الطلب",
+  "deliveryAddress": "عنوان التوصيل",
   "changeAddress": "تغيير",
   "paymentMethod": "طريقة الدفع",
-  "cash": "نقدي",
+  "cash": "نقداً",
   "creditCard": "بطاقة ائتمان",
-  "mobilePayment": "الدفع عبر الهاتف",
+  "mobilePayment": "دفع عبر الجوال",
   "comingSoon": "قريباً",
-  "orderNote": "ملاحظة الطلب",
-  "orderNotePlaceholder": "أضف ملاحظة للسائق (اختياري)",
-  "estimatedDelivery": "وقت التسليم المتوقع",
+  "orderNotePlaceholder": "أضف ملاحظة للمندوب (اختياري)",
+  "estimatedDelivery": "وقت التوصيل المتوقع",
   "minutes": "دقيقة",
   "orderSummary": "ملخص الطلب",
-  "confirmOrder": "تأكيد الطلب",
-  "pleaseSelectAddress": "يرجى اختيار عنوان التسليم",
+  "pleaseSelectAddress": "يرجى اختيار عنوان التوصيل",
   "pleaseSelectPaymentMethod": "يرجى اختيار طريقة الدفع",
   "orderCreatedSuccess": "تم إنشاء طلبك بنجاح!",
   "noAddressFound": "لم يتم العثور على عنوان",
