--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -145,6 +145,17 @@
   "discountTitle": "Discount",
   "cartDeliveryFeeLabel": "Delivery Fee",
   "cartTotalAmountLabel": "Total Amount",
+  "checkoutTitle": "Checkout",
+  "addOrderNote": "Add Order Note",
+  "orderNote": "Order Note",
+  "enterOrderNoteHint": "Enter your note for the order...",
+  "couponApplied": "Coupon Applied",
+  "couponRemoved": "Coupon Removed",
+  "enterCouponCode": "Enter Coupon Code",
+  "apply": "Apply",
+  "noCampaignsFound": "No Active Campaigns",
+  "noCampaignsDescription": "There are no active campaigns at the moment. Please check back later or enter a coupon code.",
+  "confirmOrder": "Confirm Order",
   "cartSameVendorWarning": "All items in the cart must be from the same vendor",
   "orderPlacedTitle": "Order Received!",
   "orderPlacedMessage": "Your order number: {orderId}\nTotal: {total}",
@@ -467,7 +478,6 @@
   "approve": "Approve",
   "verify": "Verify",
   "placeOrder": "Place Order",
-  "checkoutTitle": "Order Confirmation",
   "deliveryAddress": "Delivery Address",
   "changeAddress": "Change",
   "paymentMethod": "Payment Method",
@@ -475,12 +485,10 @@
   "creditCard": "Credit Card",
   "mobilePayment": "Mobile Payment",
   "comingSoon": "Coming Soon",
-  "orderNote": "Order Note",
   "orderNotePlaceholder": "Add note for courier (optional)",
   "estimatedDelivery": "Estimated Delivery",
   "minutes": "minutes",
   "orderSummary": "Order Summary",
-  "confirmOrder": "Confirm Order",
   "pleaseSelectAddress": "Please select a delivery address",
   "pleaseSelectPaymentMethod": "Please select a payment method",
   "orderCreatedSuccess": "Your order has been created successfully!",
