--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -140,6 +140,17 @@
   "discountTitle": "İndirim",
   "cartDeliveryFeeLabel": "Teslimat Ücreti",
   "cartTotalAmountLabel": "Genel Toplam",
+  "checkoutTitle": "Ödeme",
+  "addOrderNote": "Sipariş Notu Ekle",
+  "orderNote": "Sipariş Notu",
+  "enterOrderNoteHint": "Siparişiniz için notunuzu girin...",
+  "couponApplied": "Kupon Uygulandı",
+  "couponRemoved": "Kupon Kaldırıldı",
+  "enterCouponCode": "Kupon Kodu Girin",
+  "apply": "Uygula",
+  "noCampaignsFound": "Aktif Kampanya Yok",
+  "noCampaignsDescription": "Şu anda aktif bir kampanya bulunmamaktadır. Lütfen daha sonra tekrar kontrol edin veya kupon kodu girin.",
+  "confirmOrder": "Siparişi Onayla",
   "cartSameVendorWarning": "Sepetteki tüm ürünler aynı marketten olmalı",
   "orderPlacedTitle": "Sipariş Alındı!",
   "orderPlacedMessage": "Sipariş numaranız: {orderId}\nToplam: {total}",
@@ -457,20 +468,17 @@
   "approve": "Onayla",
   "verify": "Onayla",
   "placeOrder": "Sipariş Ver",
-  "checkoutTitle": "Sipariş Onayı",
   "deliveryAddress": "Teslimat Adresi",
   "changeAddress": "Değiştir",
   "paymentMethod": "Ödeme Yöntemi",
   "cash": "Nakit",
   "creditCard": "Kredi Kartı",
   "mobilePayment": "Mobil Ödeme",
-  "comingSoon": "Yakında",
-  "orderNote": "Sipariş Notu",
-  "orderNotePlaceholder": "Kurye için not ekleyin (opsiyonel)",
+  "comingSoon": "Çok Yakında",
+  "orderNotePlaceholder": "Kurye için not ekle (isteğe bağlı)",
   "estimatedDelivery": "Tahmini Teslimat",
   "minutes": "dakika",
   "orderSummary": "Sipariş Özeti",
-  "confirmOrder": "Siparişi Onayla",
   "pleaseSelectAddress": "Lütfen teslimat adresi seçin",
   "pleaseSelectPaymentMethod": "Lütfen ödeme yöntemi seçin",
   "orderCreatedSuccess": "Siparişiniz başarıyla oluşturuldu!",
