feat: update checkout screen UI with shared header and new order information section, adding corresponding localization strings.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -46,6 +46,8 @@
   "total": "المجموع",
   "totalPrice": "السعر الإجمالي",
   "checkout": "الدفع",
+  "checkoutSubtitle": "دفع آمن",
+  "orderInformation": "معلومات الطلب",
   "orderHistory": "سجل الطلبات",
   "orderDetail": "تفاصيل الطلب",
   "deliveryTracking": "تتبع التسليم",
