feat: Add Sham Cash account number field to vendor and courier profiles with corresponding UI and database migration.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -1119,5 +1119,6 @@
   "workingHoursEnd": "وقت الانتهاء",
   "selectTime": "اختر الوقت",
   "workingHoursUpdatedSuccessfully": "تم تحديث ساعات العمل بنجاح",
-  "failedToUpdateWorkingHours": "فشل تحديث ساعات العمل"
+  "failedToUpdateWorkingHours": "فشل تحديث ساعات العمل",
+  "shamCashAccountNumber": "رقم حساب شام كاش"
 }
