--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -1,5 +1,9 @@
 {
   "@@locale": "ar",
+  "free": "مجاني",
+  "@free": {
+    "description": "Free"
+  },
   "appTitle": "Talabi",
   "@appTitle": {
     "description": "عنوان التطبيق"
