feat: Enhance free delivery progress bar with an animated courier icon and update free delivery localization strings.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -571,6 +571,10 @@
       }
     }
   },
+  "freeDeliveryDescription": "أضف المزيد من العناصر إلى سلتك للحصول على توصيل مجاني!",
+  "@freeDeliveryDescription": {
+    "description": "Description for free delivery progress"
+  },
   "cartTotalAmountLabel": "المبلغ الإجمالي",
   "@cartTotalAmountLabel": {
     "description": "المبلغ الإجمالي"
