feat: Enhance cart recommendations logic by combining user history and nearby vendor products, and update the recommendations UI with new localization and layout adjustments.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -541,7 +541,11 @@
   },
   "cartEmptyMessage": "سلتك فارغة",
   "@cartEmptyMessage": {
-    "description": "سلتك فارغة"
+    "description": "Your cart is empty"
+  },
+  "recommendedForYou": "مقترح لك",
+  "@recommendedForYou": {
+    "description": "Title for the recommendations section in empty cart"
   },
   "cartVoucherPlaceholder": "أدخل رمز القسيمة",
   "@cartVoucherPlaceholder": {
